--- a/data/cv/experience/ingresso.toml
+++ b/data/cv/experience/ingresso.toml
@@ -1,6 +1,6 @@
 company = "Ingresso"
 position = "Lead Software Engineer"
-start_date = "Dec 2013"
+dates = "Dec 2013 - Present"
 location = "London, UK"
 description = """
 - Initial role as fullstack web developer, promoted to engineering manager for front end and distribution team in July 2018. 
