--- a/data/cv/experience/amadeus.toml
+++ b/data/cv/experience/amadeus.toml
@@ -1,7 +1,6 @@
 company = "Amadeus"
 position = "Software Engineer"
-start_date = "Aug 2010"
-end_date = "Nov 2013"
+dates = "Aug 2010 - Nov 2013"
 location = "Sophia Antipolis, France"
 description = """
 - Worked on Amadeus Cruise product, as a contractor for Thales Services, developing new features and maintaining reservation backend in production.
