--- a/data/cv/interests.toml
+++ b/data/cv/interests.toml
@@ -1,5 +1,15 @@
-interests = [
-    "**Sport**: in particular golf, tennis and cycling.",
-    "**Music**: currently learning to play guitar.",
-    "Other hobbies include **cooking** and **photography**."
-]
+[[interest]]
+icon = "fas fa-golf-ball"
+desc = "**Sport**: in particular golf, tennis and cycling."
+
+[[interest]]
+icon = "fas fa-music"
+desc = "**Music**: currently learning to play guitar."
+
+[[interest]]
+icon = "fas fa-utensils"
+desc = "**Cooking**"
+
+[[interest]]
+icon = "fas fa-camera-retro"
+desc = "**Photography**"
