--- a/config.toml
+++ b/config.toml
@@ -41,12 +41,12 @@ pygmentscodefencesguesssyntax = true # Enable syntax guessing for code fences wi
     weight = 2
     url = "https://stackoverflow.com/story/rossgray"
 [[params.social]]
-    name = "Twitter"
-    icon = "fab fa-twitter fa-2x"
-    weight = 3
-    url = "https://twitter.com/rossgray/"
-[[params.social]]
     name = "LinkedIn"
     icon = "fab fa-linkedin fa-2x"
-    weight = 4
+    weight = 3
     url = "https://www.linkedin.com/in/rossgray1/"
+#[[params.social]]
+#    name = "Twitter"
+#    icon = "fab fa-twitter fa-2x"
+#    weight = 4
+#    url = "https://twitter.com/rossgray/"
