--- a/data/cv/other_experience/mercedes.toml
+++ b/data/cv/other_experience/mercedes.toml
@@ -3,7 +3,7 @@ position = "Engineering Assistant"
 dates = "Sep 2004 - Apr 2005 & Sep 2006"
 location = "Northants, UK"
 description = """
-Designed fixtures using Catia V5 (3D CAD package).
-Analysed flow of components around workshop using simulation software.
+- Designed fixtures using Catia V5 (3D CAD package).
+- Analysed flow of components around workshop using simulation software.
 """
 weight = 4
