--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/rossgray/rossgray.co.uk#readme",
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
